--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "base-node",
-  "version": "0.2.1",
-  "description": "Base Node.JS Development Environment",
-  "repository": "https://github.com/blakelapierre/base-node",
+  "name": "base-typescript",
+  "version": "0.0.1",
+  "description": "Base Typescript/Node.JS Development Environment",
+  "repository": "https://github.com/blakelapierre/base-typescript",
   "main": "index.js",
   "author": "Blake La Pierre",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
-    "browserify": "^12.0.1",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.1.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "browserify": "^14.5.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-pipe": "^1.0.4",
     "gulp-print": "^2.0.1",
-    "gulp-run": "^1.6.12",
-    "gulp-sequence": "^0.4.1",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-run": "^1.7.1",
+    "gulp-sequence": "^0.4.6",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-tasks": "0.0.2",
-    "gulp-traceur": "^0.17.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.1.0",
+    "gulp-traceur": "^0.17.2",
+    "gulp-typescript": "^3.2.3",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "minimist": "^1.2.0",
-    "traceur": "0.0.93",
+    "traceur": "0.0.111",
     "traceur-runtime": "0.0.59",
+    "typescript": "^2.6.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
