--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Blake La Pierre",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^8.0.53",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
