--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "traceur-runtime": "0.0.59",
     "typescript": "^2.6.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "tmi.js": "^1.2.1",
+    "ws": "^6.0.0"
   }
 }
